--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,11 @@
 @import "tailwindcss";
 
 
+html {
+  scrollbar-width: none;
+  -ms-overflow-style: none; 
+}
+
+html::-webkit-scrollbar {
+  display: none;
+}
